# spacebar

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  install.sh  package-lock.json  package.json  preferences.html  tooltip.html  vite.config.ts
.claude/: settings.local.json
.claude/commands/: release.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/superpowers/plans/: 2026-03-29-agent-monitor.md  2026-03-29-window-vibrancy-upgrade.md  2026-03-30-edge-snapping.md  2026-04-06-split-view.md  2026-04-07-coloris-color-picker.md  2026-04-07-docker-registration.md  2026-04-07-gh-release-workflow.md  2026-04-07-icon-display-mode.md  2026-04-07-states-config.md
docs/superpowers/specs/: 2026-03-29-agent-monitor-design.md  2026-03-29-feature-roadmap-design.md  2026-03-29-mascot-grouping-design.md  2026-03-29-sound-packs-design.md  2026-03-29-tooltip-window-design.md  2026-03-29-tray-agents-plan.md  2026-03-30-edge-snapping-design.md  2026-03-30-sound-mute-no-sound-design.md  2026-04-01-companion-app-design.md  2026-04-06-split-view-design.md  2026-04-07-coloris-color-picker-design.md  2026-04-07-docker-registration-design.md  (+4 more)
src/: color-utils.ts  main.ts  mascot-grid.ts  preferences-page.css  preferences-page.ts  preferences.ts  sound.ts  state-defaults.ts  state.ts  styles.css  tooltip-window.ts  tooltip.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: blur.rs  commands.rs  config.rs  lib.rs  liveness.rs  main.rs  server.rs  split_view.rs  state.rs
src/mascots/: claude-code.ts  cursor.ts  registry.ts  types.ts
